Bug 152506 - Footnote order error, first footnote replaced.
Summary: Footnote order error, first footnote replaced.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0.0.beta2 target:7.4.6 tar...
Keywords: regression
Depends on:
Blocks: DOCX-Footnote-Endnote
  Show dependency treegraph
 
Reported: 2022-12-14 13:37 UTC by NISZ LibreOffice Team
Modified: 2023-03-21 16:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (11.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-12-14 13:38 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-12-14 13:37:51 UTC
Description:
The footnote order may be wrong if the first footnote is reversed in footnote.xml.

Steps to Reproduce:
1. Open attached file.

Actual Results:
Footnotes in wrong order.

Expected Results:
Footnotes in the correct order.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-12-14 13:38:40 UTC
Created attachment 184145 [details]
Sample file
Comment 2 László Németh 2022-12-19 07:38:11 UTC
Fixed in commit 96a856f87f16cca2e039c973c18d57c8b9dca362
Comment 3 NISZ LibreOffice Team 2022-12-20 07:53:39 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2022-12-20 08:47:14 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8e7995a748bb0b9b77265bdcd74ce4800bc8afa2

tdf#152506 DOCX import: fix mixed first footnote

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-12-20 08:48:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/98c8a910b50a83ba942a5a5634e4893e6a7bca6d

tdf#152506 DOCX import: fix mixed first footnote

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-24 10:36:16 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard
Comment 7 Commit Notification 2023-02-16 15:31:37 UTC
Seth Chaiklin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b63bffc2bb5a68d1f21e4035dde9a60429c9173c

tdf#152506 "titles" -> "headings" in tips of the day

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.