tdf#152506 DOCX import: fix mixed first footnote

Also the first footnote can be at arbitrary
place in footnote.xml.

Follow-up to commit 09ae3c01940bbc25ffde51963683b04e3cb4bb6a
"tdf#152203 DOCX import: fix mixed footnotes/endnotes".

Change-Id: Iab356f7373483d812f0e802a994357fdad831d9d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144380
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 96a856f87f16cca2e039c973c18d57c8b9dca362)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144422
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>